# PCRC

./: PACKAGE_MANIFEST.md  README.md  pyproject.toml  requirements.txt
configs/: exp2_phase_transition.yaml  exp3_m5_case.yaml  exp4_credit_case.yaml  exp5_offpolicy.yaml  smoke_cpu.yaml  smoke_d0.yaml
scripts/: __init__.py  download_datasets.py  prepare_data.py  run_d0_experiment.py  run_d1_m5.py  run_d2_credit.py  run_offpolicy_d0.py  run_smoke_tests.py
src/pcrc/: __init__.py  config.py  constants.py  contract.py  io.py  logging_utils.py  models.py  overview.py  reporting.py  types.py  utils.py
src/pcrc/data/: credit.py  m5.py
src/pcrc/experiments/: d0.py  d1_m5.py  d2_credit.py  offpolicy.py
src/pcrc/methods/: __init__.py  base.py  conformal.py
src/pcrc/simulators/: __init__.py  d0.py
src/pcrc/solvers/: __init__.py  soft_robust.py
tests/: conftest.py  test_contract.py  test_credit_loader.py  test_d0.py  test_d1_m5.py  test_d2.py  test_d2_credit_smoke.py  test_methods.py  test_offpolicy_smoke.py  test_reporting.py  test_schema.py
