[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcrc"
version = "0.1.0"
description = "Performative Conformal Risk Calibration experimental system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.15",
  "scikit-learn>=1.5",
  "torch>=2.1",
  "matplotlib>=3.10",
  "seaborn>=0.13",
  "lightgbm>=4.6",
  "pyarrow>=16.1",
  "joblib>=1.5",
  "PyYAML>=6.0",
  "requests>=2.32",
  "huggingface_hub>=0.36",
  "xlrd>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
